tests/wpt/tests/third_party/test262/test/language/statements/try/S12.14_A16_T10.js
// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: |
    TryStatement: "try Block Catch" or "try Block Finally" or "try Block
    Catch Finally"
es5id: 12.14_A16_T10
description: "Catch: \"catch (Identifier ) Block\""
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

// CHECK#1
try{}
catch(){}
finally{}
